Add right menu links translations

--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -2,11 +2,13 @@ es:
   size: 'cantidad'
   recipient: 'destinatarios'
   home: 'Inicio'
+  welcome: 'bienvenido'
   single_mode: 'Sencillo'
   massive_mode: 'Masivo'
   lists: 'Lista'
   summary: 'Resumen'
   all_sms: 'Sms'
-  welcome: 'bienvenido'
   credits: 'Créditos'
   routes: 'Rutas'
+  account: 'Cuenta'
+  sign_out: 'Salir'
