--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -8,3 +8,34 @@ es:
   summary: 'Resumen'
   all_sms: 'Sms'
   welcome: 'bienvenido'
+  delivery_reports: 'Reportes de entrega'
+  summary_for: 'Resumen del per&iacute;odo'
+  show_summary: 'Mostrar el per&iacute;odo'
+  last_24h: '&Uacute;ltimas 24h'
+  2_days: 'De 48h a 24h'
+  3_days: 'De 72h a 48h'
+  4_days: 'De 96h a 72h'
+  last_week: '&Uacute;ltima semana'
+  week_before: 'La semana antes'
+  30_days: '&Uacute;ltimos 30 d&iacute;as'
+  this_month: 'Este mes'
+  1_month: '1 mes atr&aacute;s'
+  2_month: '2 meses atr&aacute;s'
+  redeliveries: 'Re-env&iacute;os'
+  include_normally: 'Incluirlos'
+  ignore_redeliveries: 'Ignorarlos'
+  only_redeliveries: 'Solo re-env&iacute;os'
+  select_route: 'Seleccionar ruta'
+  all: 'todas'
+  you_can_select: 'solo puede seleccionar rutas con mensajes en este per&iacute;odo'
+  delivered_within: 'Entregados en (hora:min:seg)'
+  delivery_time: 'Tiempo'
+  of_sent_sms: 'enviado'
+  of_delivered_sms: 'entregado'
+  delivery_report_statuses: 'Estado de los reportes'
+  by_sms_type: 'Por tipo de sms'
+  sms_type: 'Tipo'
+  count: 'Cantidad'
+  of_total: 'del total'
+  delivered_count: 'Cant. entregada'
+  delivery: 'Entrega'
