--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -48,7 +48,7 @@ es:
   single_message: 'mensaje sencillo'
   logged_in_as: 'Identificado como'
   user: 'Usuario'
-  new_credit: 'Añadir cr&eacute;dito'
+  new_credit: 'A&ntilde;adir cr&eacute;dito'
   edit: 'Editar'
   back: 'Atr&aacute;s'
   listing_credits: 'Cr&eacute;ditos'
