--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -49,7 +49,17 @@ es:
   logged_in_as: 'Identificado como'
   user: 'Usuario'
   new_credit: 'A&ntilde;adir cr&eacute;dito'
+  editing_credit: 'Editar cr&eacute;dito'
   edit: 'Editar'
   back: 'Atr&aacute;s'
   listing_credits: 'Cr&eacute;ditos'
   credit_date: 'Fecha'
+  name: 'Nombre'
+  price: 'Precio'
+  gateway: 'Proveedor'
+  new_route: 'A&ntilde;adir ruta'
+  listing_routes: 'Rutas'
+  show: 'Ver'
+  destroy: 'Eliminar'
+  sure: '&iquest;Est&aacute; seguro?'
+  editing_route: 'Editar ruta'
