--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -1,6 +1,6 @@
 es:
   size: 'cantidad'
-  recipient: 'destinatarios'
+  recipient: 'Destinatario'
   home: 'Inicio'
   welcome: 'bienvenido'
   single_mode: 'Sencillo'
@@ -40,6 +40,21 @@ es:
   of_total: 'del total'
   delivered_count: 'Cant. entregada'
   delivery: '% de entrega'
+  last: '&Uacute;ltimos'
+  ordered_by_creation_date: 'ordenados por fecha de env&iacute;o'
+  list_offset: 'Desfasaje'
+  add: 'A&ntilde;adir'
+  to_offset: 'pr&oacute;ximos'
+  message_id: 'No. Msg'
+  status: 'Estado'
+  route: 'Ruta'
+  id: 'No.'
+  created_at: 'Creado en'
+  msg_id: 'No. Mensaje'
+  status_updated_at: 'Estado actualizado en'
+  sender: 'Remitente'
+  re_delivered: 'Re-enviado'
+  re_delivery_of: 'No. de re-env&iacute;o'
   credits: 'Cr&eacute;ditos'
   routes: 'Rutas'
   account: 'Cuenta'
