--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -2,13 +2,13 @@ es:
   size: 'cantidad'
   recipient: 'Destinatario'
   home: 'Inicio'
-  welcome: 'bienvenido'
   single_mode: 'Sencillo'
   massive_mode: 'Masivo'
   lists: 'Lista'
   summary: 'Resumen'
   all_sms: 'Sms'
-  welcome: 'bienvenido'
+  welcome: 'Bienvenido'
+  today_is: 'Hoy es'
   delivery_reports: 'Reportes de entrega'
   summary_for: 'Resumen del per&iacute;odo'
   show_summary: 'Mostrar el per&iacute;odo'
