Top menu i18n fix

--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -2,11 +2,11 @@ es:
   size: 'cantidad'
   recipient: 'Destinatario'
   home: 'Inicio'
-  single_mode: 'Sencillo'
-  massive_mode: 'Masivo'
-  lists: 'Lista'
-  summary: 'Resumen'
-  all_sms: 'Sms'
+  single_mode: 'Env&iacute;o puntual'
+  massive_mode: 'Env&iacute;o masivo'
+  lists: 'Listas'
+  summary: 'Sumario'
+  all_sms: 'Reportes'
   welcome: 'Bienvenido'
   today_is: 'Hoy es'
   delivery_reports: 'Reportes de entrega'
