--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -12,4 +12,5 @@ en:
 
   new: "New %{item}"
   single_message: 'single message'
+  bulk_message: 'bulk message'
   not_route_error: 'No route for user'
