--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -14,3 +14,5 @@ en:
   single_message: 'single message'
   bulk_message: 'bulk message'
   not_route_error: 'No route for user'
+
+  message: 'message'
