Lists i18n in Bulk message

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -4,7 +4,7 @@ en:
   home: 'Home'
   single_mode: 'Single mode'
   massive_mode: 'Masive Mode'
-  lists: 'List'
+  lists: 'Lists'
   summary: 'Summary'
   all_sms: 'All Sms'
   credits: 'Credits'
