--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -12,6 +12,7 @@ en:
   route: 'route'
   gateway: 'Gateway'
 
+  new_item_f: "New %{item}"
   new_item: "New %{item}"
   editing: "Editing %{item}"
   single_message: 'single message'
@@ -30,3 +31,6 @@ en:
 
   name: 'Name'
   price: 'Price'
+
+  upload_file: 'Upload file'
+  gsm_numbers: 'GSM numbers'
