--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -61,6 +61,7 @@ es:
   account: 'Cuenta'
   sign_out: 'Salir'
   new_item: "Nuevo %{item}"
+  new_item_f: "Nueva %{item}"
   single_message: 'mensaje puntual'
   bulk_message: 'mensaje masivo'
   logged_in_as: 'Identificado como'
@@ -95,3 +96,5 @@ es:
   bulk_message_plural: 'mensajes masivos'
 
   editing: "Editar %{item}"
+  upload_file: 'Subir archivo'
+  gsm_numbers: 'n&uacute;umeros GSM'
