--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -98,3 +98,6 @@ es:
   editing: "Editar %{item}"
   upload_file: 'Subir archivo'
   gsm_numbers: 'n&uacute;umeros GSM'
+
+  create_item: "Crear %{item}"
+  choose_file: "Escoger archivo"
