--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -12,6 +12,7 @@ en:
   route: 'route'
   gateway: 'Gateway'
   user: 'User'
+  delivery_reports: 'Delivery reports'
 
   new_item_f: "New %{item}"
   new_item: "New %{item}"
