Change sent status translation

--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -106,5 +106,5 @@ es:
   new_user: 'Nuevo Usuario'
   spent: 'Gasto'
 
-  sent_status: 'Enviado'
+  sent_status: 'Pendiente'
   delivered_status: 'Entregado'
