I18n for SingleMessage errors & models attrs

--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -108,3 +108,11 @@ es:
 
   sent_status: 'Pendiente'
   delivered_status: 'Entregado'
+
+  activerecord:
+    models:
+      single_message: 'Env&iacute;o puntual'
+    attributes:
+      single_message:
+        number: 'Destinatario'
+        message: 'Mensaje'
