I18n for Groups views

--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -119,6 +119,7 @@ es:
       route: 'Ruta'
       gateway: 'Proveedor'
       group_message: 'Env&iacute;o a grupo'
+      group: 'Grupo'
     attributes:
       single_message:
         number: 'Destinatario'
