--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -111,6 +111,10 @@ es:
 
   at_route: 'en la ruta: %{route}'
 
+  notice:
+    sucess_msg_sent: 'El %{msg} fue iniciado satisfactoriamente'
+    sucess_msg_resent: 'El %{msg} fue reiniciado satisfactoriamente'
+
   activerecord:
     models:
       single_message: 'Env&iacute;o puntual'
