Gateways link to admin

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -11,6 +11,7 @@ en:
   routes: 'Routes'
   route: 'route'
   gateway: 'Gateway'
+  gateways: 'Gateways'
   user: 'User'
   delivery_reports: 'Delivery reports'
 
