Locales for debit model

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -67,6 +67,7 @@ en:
       gateway: 'Gateway'
       group_message: 'Group message'
       group: 'Group'
+      debit: 'Debit'
 
   errors:
     messages:
