--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -129,7 +129,7 @@ es:
       gateway: 'Proveedor'
       group_message: 'Env&iacute;o a grupo'
       group: 'Grupo'
-      debit: Débit
+      debit: Débito
     attributes:
       single_message:
         number: 'Destinatario'
