Locales (es) for observer model

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -70,6 +70,7 @@ en:
       group_message: 'Group message'
       group: 'Group'
       debit: 'Debit'
+      observer: Observer
 
   errors:
     messages:
