Fix Route translation typo

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -65,7 +65,7 @@ en:
       list: 'List'
       contact: 'Contact'
       credit: 'Credit'
-      route: 'Routa'
+      route: 'Route'
       gateway: 'Gateway'
       group_message: 'Group message'
       group: 'Group'
