Max debt I18n for user debt

--- a/config/locales/devise.views.es.yml
+++ b/config/locales/devise.views.es.yml
@@ -8,6 +8,7 @@ es:
         password_confirmation: Confirme la contraseña
         remember_me: Recordar contraseña
         admin: Administrador
+        max_debt: "M&aacute;xima Deuda"
     models:
       user: Usuario
   devise:
