Fix number locale for observer

--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -160,7 +160,7 @@ es:
         user: 'Usuario'
         balance: 'Balance'
       observer:
-        number: Número
+        number: "N&uacute;mero"
         active: "Activo"
 
   errors:
