--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -116,8 +116,10 @@ es:
   notice:
     sucess_msg_sent: 'El %{msg} fue iniciado satisfactoriamente'
     sucess_msg_resent: 'El %{msg} fue reiniciado satisfactoriamente'
-    item_created: '%{item} creado/a satisfactoriamente.'
-    item_updated: '%{item} actualizado/a satisfactoriamente.'
+    item_created: '%{item} creado satisfactoriamente.'
+    item_updated: "%{item} actualizado satisfactoriamente."
+    item_created_fm: '%{item} creada satisfactoriamente.'
+    item_updated_fm: "%{item} actualizada satisfactoriamente."
 
   activerecord:
     models:
