Add undelivered key to locales

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -47,6 +47,7 @@ en:
 
   sent_status: 'Pending'
   delivered_status: 'Delivered'
+  undelivered_status: 'Undelivered'
 
   at_route: 'at %{route} route'
 
