--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -52,6 +52,9 @@ en:
 
   date_field: Date
 
+  sms_size: "Sms size"
+  sms_parts: "Sms parts"
+
   notice:
     sucess_msg_sent: '%{msg} was successfully sent.'
     sucess_msg_resent: '%{msg} was successfully re-sent.'
