Jobs key in locale

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -5,6 +5,7 @@ en:
   single_mode: 'Single mode'
   massive_mode: 'Masive Mode'
   lists: 'Lists'
+  jobs: 'Jobs'
   summary: 'Summary'
   all_sms: 'All Sms'
   credits: 'Credits'
