Remove name parameter

--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -124,7 +124,8 @@ es:
     item_updated: "%{item} actualizado satisfactoriamente."
     item_created_fm: '%{item} creada satisfactoriamente.'
     item_updated_fm: "%{item} actualizada satisfactoriamente."
-    item_removed: "%{item} %{name} eliminada satisfactoriamente."
+    item_removed: "%{item} eliminado satisfactoriamente."
+    item_removed_fm: "%{item} eliminada satisfactoriamente."
 
   activerecord:
     models:
