Fix: page gap i18n

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -87,3 +87,5 @@ en:
       date_time: ! '%b %d %Y, %H:%M:%S'
   cancan:
     access_denied: 'You are not authorized to see this page'
+  will_paginate:
+    page_gap: '...'
