--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -13,6 +13,7 @@ en:
   route: 'route'
   gateway: 'Gateway'
   gateways: 'Gateways'
+  observers: 'Observers'
   user: 'User'
   delivery_reports: 'Delivery reports'
 
