--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -7,6 +7,7 @@ es:
   single_mode: 'Env&iacute;o puntual'
   massive_mode: 'Env&iacute;o masivo'
   lists: 'Listas'
+  topup: 'Recarga'
   topups: 'Recargas'
   jobs: 'Tareas'
   summary: 'Sumario'
