Fix missing en translations in Topups

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -16,6 +16,8 @@ en:
   observers: 'Observers'
   user: 'User'
   delivery_reports: 'Delivery reports'
+  all: 'All'
+  all_m: 'All'
 
   new_item_f: "New %{item}"
   new_item: "New %{item}"
