Remove max debt from user

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -83,6 +83,7 @@ en:
 
   errors:
     messages:
+      insufficient_funds: "Not enough balance to cover a %{cost} expense"
       debit_limit_violation: "Message cost (%{cost}) violates your credit limit (%{limit})"
       valid_gsm_number_format: "Only gsm numbers from cubacel allowed, ie 5352134312"
       invalid_cubacel_number: "%{num} is not a valid Cubacel number"
