--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -194,6 +194,7 @@ es:
 
   errors:
     messages:
+      insufficient_funds: "No tiene fondos suficientes para cubrir un gasto de %{cost}"
       debit_limit_violation: "El costo(%{cost}) del mensaje excede el l&iacute;mite(%{limit}) de d&eacute;bito permitido"
       valid_gsm_number_format: "Solo se aceptan n&uacute;meros de Cuba, por ejemplo 5352134312"
       invalid_cubacel_number: "%{num} no es un n&uacute;mero de Cubacel"
