Select2 for lists in new bulk message

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -60,6 +60,8 @@ en:
   sms_size: "Sms size"
   sms_parts: "Sms parts"
 
+  select_lists: "Click to select 1 or more lists"
+
   notice:
     sucess_msg_sent: '%{msg} was successfully sent.'
     sucess_msg_resent: '%{msg} was successfully re-sent.'
