Remove link_to_function in List show view **The method is deprecated, and will dissapear in rails 4.1 **Change the button text according to the numbers status

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -1,5 +1,8 @@
 en:
   size: 'size'
+  number: "number"
+  show_number: "Show number"
+  hide_number: "Hide number"
   recipient: 'recipient'
   home: 'Home'
   single_mode: 'Single mode'
