--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -154,6 +154,7 @@ es:
       debit: 'D&eacute;bito'
       observer: 'Observador'
       topup: 'Recarga'
+      script_gateway: 'mensaje generado por un script'
     attributes:
       single_message:
         number: 'Destinatario'
