--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -71,6 +71,7 @@ en:
     sucess_msg_resent: '%{msg} was successfully re-sent.'
     item_created: '%{item} was successfully created.'
     item_updated: '%{item} was successfully updated.'
+    success_schedule_sent: '%{msg} was successfully scheduling  %{time}.'
 
   activerecord:
     models:
@@ -86,7 +87,8 @@ en:
       debit: 'Debit'
       observer: Observer
       topup: 'Topup'
-
+      check_schedule: 'schedule your send'
+      schedule_sms: 'Select date and time for send your sms'
   errors:
     messages:
       insufficient_funds: "Not enough balance to cover a %{cost} expense"
