--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -139,6 +139,7 @@ es:
     item_updated_fm: "%{item} actualizada satisfactoriamente."
     item_removed: "%{item} eliminado satisfactoriamente."
     item_removed_fm: "%{item} eliminada satisfactoriamente."
+    success_schedule_sent: 'El %{msg} fue planificado satisfactoriamente %{time}.'
 
   activerecord:
     models:
@@ -154,6 +155,8 @@ es:
       debit: 'D&eacute;bito'
       observer: 'Observador'
       topup: 'Recarga'
+      check_schedule: 'Planificar envio'
+      schedule_sms: 'Elija fecha y hora de su envio'
     attributes:
       single_message:
         number: 'Destinatario'
