validates datetime in views must be present or future

--- a/config/locales/pluie.en.yml
+++ b/config/locales/pluie.en.yml
@@ -95,6 +95,11 @@ en:
       debit_limit_violation: "Message cost (%{cost}) violates your credit limit (%{limit})"
       valid_gsm_number_format: "Only gsm numbers from cubacel allowed, ie 5352134312"
       invalid_cubacel_number: "%{num} is not a valid Cubacel number"
+      date_old: " must be present or future"
+      date_notice: "Datetime"
+      incorrect_datetime: " incorrect"
+      datetime_name: "Datetime"
+
   time:
     formats:
       verbose_date: ! '%a %B %d, %Y'
