--- a/config/locales/pluie.es.yml
+++ b/config/locales/pluie.es.yml
@@ -205,6 +205,11 @@ es:
       debit_limit_violation: "El costo(%{cost}) del mensaje excede el l&iacute;mite(%{limit}) de d&eacute;bito permitido"
       valid_gsm_number_format: "Solo se aceptan n&uacute;meros de Cuba, por ejemplo 5352134312"
       invalid_cubacel_number: "%{num} no es un n&uacute;mero de Cubacel"
+      date_old: " y hora deben ser actual o futura"
+      date_notice: "Fecha"
+      incorrect_datetime: " incorrecta"
+      datetime_name: "Fecha"
+
   time:
     formats:
       verbose_date: ! '%a, %d %B %Y'
